tests/paczka1/small_fuzzy/32373628.err
Error in line 11: yDA A576 74,8
Error in line 16: yDA A491 "5",0
